--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "@fontsource/open-sans": "^5.0.22",
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.2"
     }
